@@ -1,6 +1,9 @@
 Version 1.0.4
 =============
 
+* Add Flow.EnableMassPickup option in Gameflow.lua to enable/disable mass pickup.
+* Automatically align pickups to floor surface.
+* Fix legacy pickup triggers not working.
 * Fix lasersight always displaying with revolver and crossbow.
 * Fix incorrect string IDs for item combine, HK and revolver with lasersight.
 
